Pass env vars as build-args, ensure node modules isn't getting passed in

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,7 +21,7 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 ARG TORCH_VERSION=2.0.1
 ARG TORCHVISION_VERSION=0.15.2
 ARG GPU_DRIVER=cuda
-ARG TARGETPLATFORM
+ARG TARGETPLATFORM="linux/amd64"
 # unused but available
 ARG BUILDPLATFORM
 
